@@ -1,9 +1,9 @@
 Package: Pigengene
 Type: Package
 Title: Infers biological signatures from gene expression data
-Version: 1.25.2
+Version: 1.25.4
 Date: 2016-03-31
-Author: Habil Zare, Amir Foroushani, Rupesh Agrahari, Meghan Short, Isha Mehta, and Neda Emami
+Author: Habil Zare, Amir Foroushani, Rupesh Agrahari, Meghan Short, Isha Mehta, Neda Emami, and Sogand Sajedi
 Maintainer: Habil Zare <zare@u.washington.edu>
 biocViews: GeneExpression, RNASeq, NetworkInference, Network,
         GraphAndNetwork, BiomedicalInformatics, SystemsBiology,
