@@ -1,6 +1,15 @@
 \name{NEWS}
 \title{News for \R Package \pkg{Pigenegene}}
 
+\section{Changes in version 1.25.4 (2022-12-01)}{
+  \subsection{Changes in existing functions}{
+    \itemize{
+      \item The \code{get.enriched.pw} function
+      adds gene symbols in the excel file.
+    }
+  }
+}
+
 \section{Changes in version 1.23.4 (2022-05-23)}{
   \subsection{Changes in existing functions}{
     \itemize{
